work in progress commit

--- a/blog/templates/new_post.html
+++ b/blog/templates/new_post.html
@@ -4,26 +4,10 @@
 
 Writting New Post
 
-<form>
-  <table>
-    <tr>
-      <td>
-       <input type="text" name="title"/>
-      </td>
-    </tr>
-    <tr>
-      <td>
-       <textarea></textarea>
-      </td>
-    </tr>
-    <tr>
-      <td>
-       <input type="submit"/>
-      </td>
-    </tr>
-  </table>
+<form action="/new" method="post">
+{% csrf_token %}
+{{form}}
+<input type="submit" value="Submit"/>
 </form>
-
-{% endblock %}
 
 {% endblock %}
