--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -6,12 +6,14 @@
 </head>
 
 <body>
-	<!--  
-		since we don't have logging tools, we need to somehow switch users  
-	-->
-	<div>switch user <form><input type="text" /><input type="submit"/></form></div>
 
-	<div>Navigation <a href=></div>
+	<div>Navigation <a href="/home">Home</a> | <a href="/new">Add Post</a></div>
+
+	<div>
+		You are logged in as 
+		( <a href="/login">Login</a> | <a href="/logout">Logout</a> )
+	</div>
+	
 
     {% block main_part %}
     lol, it didn't worked?
