--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -2,12 +2,17 @@
 
 {% block main_part %}
 
+<div id="main-table">
+
 Login
 
-<form action="/login" method="post">
-  <input type="text" name="login"/>
-  <input type="text" name="password"/>
+<form  action="/login" method="post">
+  {% csrf_token %}
+  <input type="text" name="username"/>
+  <input type="password" name="password"/>
   <button type="submit">Login</button>  
 </form>
+
+</div>
 
 {% endblock %}
