--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -8,6 +8,14 @@
 
 <body>
 
+{% if messages %}
+<ul id="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+
 	<table id="top-table">
 	<tr>
 	<td>
