--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -11,6 +11,7 @@ Login
   <input type="text" name="username"/>
   <input type="password" name="password"/>
   <button type="submit">Login</button>  
+  <input type="hidden" name="next" value="/home" />
 </form>
 
 </div>
