--- a/blog/templates/new_post.html
+++ b/blog/templates/new_post.html
@@ -11,11 +11,13 @@ Writting New Post
 <table>
 <tr>
 <td>
+Title
 <input type="text" name="title"/>
 </td>
 </tr>
 <tr>
 <td>
+Text
 <textarea name="text"></textarea>
 </td>
 </tr>
