--- a/blog/templates/view_post.html
+++ b/blog/templates/view_post.html
@@ -6,10 +6,12 @@
 
 Viewing Post: {{ p.title }}
 Date Written: {{ p.date }}
-Author: {{ p.username }}
+Author: {{ p.user.username }}
 
 <pre>
 {{p.text}}
 </pre>
+
+</div>
 
 {% endblock %}
